<resources>
    <string name="app_name">Jebora</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_kids">AddKids</string>
    <string name="main_login">已注册用户登陆</string>
    <string name="main_email_reg">Email注册新账号</string>
    <string name="title_activity_sign_up_2">SignUp_2</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="Return">返回</string>
    <string name="Register">注册</string>
    <string name="login">登陆</string>
    <string name="boy">男孩</string>
    <string name="girl">女孩</string>
    <string name="child_name">孩子名字</string>
    <string name="my_name">我是...</string>
    <string name="child_birthday">孩子生日</string>
    <string name="dad">爸爸</string>
    <string name="mom">妈妈</string>
    <string name="other">其他</string>
    <string name="read_agreement">查看使用条款</string>
    <string name="agree_agreement">同意使用条款</string>
    <string name="email">Email</string>
    <string name="password">密码</string>
    <string name="finish">完成</string>
    <string name="title_activity_user_main">UserMain</string>
    <string name="title_activity_photo_grid_view">全部照片</string>
    <string name="title_activity_choose_product">选择产品</string>
    <string name="title_activity_preview_product">预览</string>
    <string name="title_activity_payvement_info">支付信息</string>
    <string name="title_activity_details">编辑照片</string>
    <string name="myphotos">我的照片</string>
    <string name="mykids">我的孩子</string>
    <string name="myorders">我的订单</string>
    <string name="browseproduct">浏览产品</string>
    <string name="changepw">更改密码</string>
    <string name="settings">设置</string>
    <string name="aboutus">关于我们</string>
    <string name="follwus">关注我们</string>
    <string name="logout">注销</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="firstkid">孩子1</string>
    <string name="secondkid">孩子2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="title_activity_image_editing">ImageEditing</string>
    <string name="title_activity_product_select">ProductSelect</string>
    <string name="title_activity_profile_editing">ProfileEditing</string>
    <string name="title_activity_manage_kids">ManageKids</string>
    <string name="title_activity_edit_kid">EditKid</string>


        <string-array name="fronts_array">
            <item>字体</item>
            <item>Billion Stars</item>
            <item>钟齐蔡云汉毛笔行书</item>
            <item>熊猫萌萌</item>
            <item>Wedgie</item>
            <item>Android</item>
        </string-array>
    <string name="title_activity_shopping_cart">ShoppingCart</string>
    <string name="title_activity_shipping_info">ShippingInfo</string>
    <string name="title_activity_account_info">AccountInfo</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_manage_address">ManageAddress</string>
    <string name="title_activity_edit_address">EditAddress</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
