<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fffefa"
    tools:context="com.jebora.jebora.EditKid">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editkid_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text=""/>

        <EditText
            android:id="@+id/child_name"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16.0dp"
            android:background="@drawable/customize_textbox"
            android:textSize="15sp"
            android:hint="@string/child_name"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/child_birthday"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16.0dp"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/text_color_selector"
            android:stateListAnimator="@null"
            android:textSize="20sp"
            android:text="@string/child_birthday"
            android:onClick="showBirthdayPickerDialog" />

        <RadioGroup
            android:id="@+id/child_gender"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16.0dp"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#bfe6f1"
                android:id="@+id/boy"
                android:layout_weight="1"
                android:text="@string/boy"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/girl"
                android:buttonTint="#bfe6f1"
                android:layout_weight="1"
                android:text="@string/girl"/>

        </RadioGroup>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16.0dp"
            android:textSize="20sp"
            android:hint="@string/my_name" />
        <RadioGroup
            android:id="@+id/relationship"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16.0dp"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#bfe6f1"
                android:id="@+id/dad"
                android:text="@string/dad"
                android:onClick="hideOther"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#bfe6f1"
                android:id="@+id/mom"
                android:text="@string/mom"
                android:onClick="hideOther"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/others"
                android:buttonTint="#bfe6f1"
                android:text="@string/other"
                android:onClick="showOther"/>

        </RadioGroup>

        <EditText
            android:id="@+id/signup_2_other_relationship"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:background="@drawable/customize_textbox"
            android:hint="其他"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/complete"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:stateListAnimator="@null"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/text_color_selector"
            android:text="完成"
            android:onClick="onClickComplete" />
    </LinearLayout>
</LinearLayout>
