<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fffefa"
    tools:context="com.jebora.jebora.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="用户名已注册"/>

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@drawable/customize_textbox"
            android:layout_marginBottom="16.0dp"
            android:popupBackground="#a9a9a9"
            android:textSize="15sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />



        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@drawable/customize_textbox"
            android:layout_marginBottom="16.0dp"
            android:textSize="15sp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="16.0dp"
            android:textSize="20sp"
            android:text="@string/read_agreement"/>

        <CheckBox
            android:id="@+id/agreement"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/agree_agreement"/>

    </LinearLayout>

</LinearLayout>
